<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="@color/colorAppPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rangDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/choose_departure_date"
            android:padding="@dimen/margin_10"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/font_regular"
            android:textSize="@dimen/size_16sp"
            android:layout_marginEnd="@dimen/margin_10"/>

        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/title_profile"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:layout_marginHorizontal="@dimen/padding_5"
            android:src="@drawable/baseline_close_24"
            android:focusable="true" />

    </LinearLayout>

    <com.archit.calendardaterangepicker.customviews.DateRangeCalendarView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        custom:calendar_tag="Test"
        custom:date_selection_mode="free_range"
        custom:disable_date_color="@color/gray"
        custom:editable="true"
        custom:enable_time_selection="false"
        custom:header_bg="@color/white"
        custom:range_color="@color/colorAccentLight"
        custom:selected_date_circle_color="@color/colorAppPrimary"
        custom:title_color="@color/black"
        custom:week_offset="0" />

    <TextView
        android:id="@+id/btnSelectRangDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/confirm"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:gravity="center"
        style="@style/SelectableItemBackground"
        android:enabled="false"
        android:textSize="@dimen/size_16sp"
        android:layout_marginVertical="@dimen/margin_10"
        android:background="@color/colorAppPrimary"
        android:backgroundTint="@color/gray"/>

</LinearLayout>