<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/custom_background_gradient_shape">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            android:elevation="0dp"
            app:elevation="0dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_5"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iconBack"
                    android:layout_width="@dimen/margin_30"
                    android:layout_height="@dimen/margin_30"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/title_profile"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:src="@drawable/arrow_back_left"
                    android:focusable="true"
                    app:tint="@color/dark_gray" />

                <TextView
                    android:id="@+id/titleToolbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/padding_5"
                    android:layout_marginEnd="@dimen/margin_15"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/thing_to_do"
                    android:textColor="@color/black"
                    android:fontFamily="@font/font_regular"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginHorizontal="@dimen/margin_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:fontFamily="@font/font_bold"
                        android:text="@string/explore_your_activity"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/make_your_first_travel_with_us"
                        android:textColor="@color/gray"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageView
                    android:layout_marginEnd="@dimen/size_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bicycle_to_do"
                    android:contentDescription="@string/content_image" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/margin_30"
                    android:background="@color/light_white">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxLines="2"
                            android:text="@string/where_do_you_destination"
                            android:textColor="@color/black"
                            android:fontFamily="@font/font_regular"
                            android:paddingVertical="@dimen/margin_10"
                            android:textSize="16sp"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/recyclerView"/>

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom_sheet_bg"
                        android:id="@+id/viewpager"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutSearch"
                    android:background="@drawable/card_view_shape"
                    android:padding="@dimen/margin_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/size_25"
                        android:layout_height="@dimen/size_25"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/title_profile"
                        android:src="@drawable/search_icon"
                        app:tint="@color/dark_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="@dimen/padding_5"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="Siem Reap"
                        android:textColor="@color/dark_gray"
                        android:fontFamily="@font/font_light"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_marginVertical="5dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/padding_5"
                        android:layout_marginEnd="@dimen/margin_15"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="Bayon Temple"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/font_light"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
